--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,16 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.100"
+clap = { version = "4.5.49", features = ["derive"] }
+colored = "3.0.0"
+dialoguer = "0.12.0"
+dirs = "6.0.0"
+env = "1.0.1"
+figment = { version = "0.10.19", features = ["env", "toml"] }
+indexmap = { version = "2.12.0", features = ["serde"] }
+itertools = "0.14.0"
+serde = { version = "1.0.228", features = ["derive"] }
+text_io = "0.1.13"
+toml = "0.9.8"
+toml_edit = "0.23.7"
